# SpeakType-Cloud

./: .env.example  .gitignore  AGENTS.md  API_PROVIDERS.md  ARCHITECTURE.md  Cargo.toml  FINAL.md  OPENCODE.md  PACKAGE_MANIFEST.md  PLAN.md  README.md  REFERENCE_ANALYSIS.md  SECURITY.md  SOURCES.md  SPEC.md  TEST.md  TODOS.md  UI_DESIGN.md  UI_DESIGN_PRINCIPLES.md  build.rs  config.example.toml  opencode-todos.md
.codex/evolution/: LESSONS.md
.codex/evolution/reviews/: 2026-07-17T14-08-57Z-speaktype-cloud-release.md  20260718T050740Z-release-engineering.md
.github/workflows/: windows.yml
.opencode/: memory.db
.opencode/memory/: memory.db-shm  memory.db-wal
.opencode/memory/.runtime/: lifecycle.jsonl
.opencode/status-footer/: state.json
docs/: GPUI_ACME_MIGRATION.md
installer/: SpeakTypeCloud.nsi  cyclonedx-minimal.schema.json  release-provenance.json
scripts/: build-installer.ps1  build-release.ps1  check.ps1  generate-sbom.ps1  install-nsis-build-tool.ps1  new-app-icon.ps1  new-update-manifest.ps1  package-portable.ps1  run.ps1  sign-artifacts.ps1  test-release.ps1
src/: app.rs  audio.rs  config.rs  error.rs  fonts.rs  history.rs  hotkey.rs  injector.rs  main.rs  paths.rs  postprocess.rs  realtime_worker.rs  secrets.rs  shell.rs  startup.rs  theme.rs  transcription.rs  updater.rs  vad.rs
src/providers/: mod.rs  models.rs  openai.rs  openrouter.rs  xai.rs
src/realtime/: mod.rs  openai.rs  xai.rs
