[package]
name = "speaktype-cloud"
version = "0.1.0"
edition = "2021"
description = "Windows-first cloud speech-to-text input method using OpenAI or xAI APIs"
license = "MIT"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"

[dependencies]
eframe = "0.27"
egui = "0.27"
cpal = "0.15"
rdev = "0.5"
enigo = "0.1"
arboard = "3.6"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
thiserror = "2"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading"
] }

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
