[package]
name = "speaktype-cloud"
version = "0.1.0"
edition = "2021"
description = "Windows-first cloud speech-to-text input method using OpenAI, xAI, or OpenRouter APIs"
license = "MIT"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"

[dependencies]
eframe = "0.27"
egui = "0.27"
cpal = "0.15"
crossbeam-queue = "0.3"
rdev = "0.5"
enigo = "0.1"
arboard = "3.6"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.30", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
zhhz = "0.8.2"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
  "Win32_System_Registry",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading"
] }

[build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
tray-icon = { version = "0.24", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
